<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_heading"
        style="@style/Primary_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/new_goal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
         />

    <EditText
        android:textSize="14sp"
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_background"
        android:focusable="true"
        android:hint="@string/goal_name"
        android:fontFamily="@font/canaro_light"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_heading">

    </EditText>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="25dp"
        android:id="@+id/btnProceed"
        android:text="@string/continue_"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/color_Primary"
        android:layout_width="match_parent"
        android:layout_height="60dp">

    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>