<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.progress.ProgressFragment">


    <include
        layout="@layout/custom_actionbar_nav_fragments"
        android:id="@+id/actionBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <com.google.android.material.tabs.TabLayout
        android:layout_marginTop="20dp"
       app:layout_constraintTop_toBottomOf="@id/actionBar"
        android:id="@+id/tabLayoutTransferFunds"
        app:tabTextAppearance="@style/TabAdapterTextStyle"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/Sage"
        android:layout_height="wrap_content"
        app:tabMode ="fixed"
        app:tabGravity ="fill"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_going_goals">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_hold_goals">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayoutTransferFunds"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/vpAccountSetUp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="70dp"
        android:id="@+id/btnExplore"
        app:maxImageSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fabCustomSize="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        app:tint="@color/white"
        android:backgroundTint="#28501B"
        android:src="@drawable/graph_svgrepo_com__1_"
        android:layout_height="70dp"

        />




</androidx.constraintlayout.widget.ConstraintLayout>