<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_Primary"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_heading"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/canaro_light"
            android:textAlignment="center"
            android:text="Pins don't match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView

            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1.7sp">

        </TextView>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="@string/set_startDate"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:textAlignment="textEnd"
                    android:id="@+id/tvStartDate"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="10-02-2023"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="@string/set_EndDate"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:textAlignment="textEnd"
                    android:id="@+id/tvEndDate"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="13-09-2023"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="@string/status"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:textAlignment="textEnd"
                    android:id="@+id/tvStatus"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/canaro_light"
                    android:text="Ongoing"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            app:cornerRadius="25dp"
            android:id="@+id/btnNegative"
            android:text="@string/complete"
            android:textSize="12sp"
            android:textColor="#808080"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            app:strokeColor="#808080"
            app:strokeWidth="1.5dp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="55dp">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>