<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.onboarding.account_setUp.EnterNameFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_keyboard_double_arrow_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBack"

            app:tint="#808080" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_heading"
        style="@style/Primary_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/Whats_you_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardBack" />


    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/_circle"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/ll2"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading"
        app:layout_constraintWidth_percent=".25">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:src="@drawable/user"
            app:tint="@color/white">

        </ImageView>


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llProfile">


        <TextView
            android:fontFamily="@font/brusselscity400"
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textSize="18sp"
           />

        <TextView
            android:id="@+id/tv_SecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text=""
            android:fontFamily="@font/brusselscity400"
            android:textSize="18sp"
            >

        </TextView>

    </LinearLayout>


<!--
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="-30dp"
        android:alpha="0.6"
        android:src="@drawable/_circle"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintHeight_percent=".26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#392823">

    </ImageView>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-70dp"
        android:alpha="0.5"
        android:src="@drawable/_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".4">

    </ImageView>
-->

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/Name">

        <EditText
            android:textSize="14sp"
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_background"
            android:focusable="true"
            android:hint="@string/first_name"
            android:fontFamily="@font/canaro_light"
            android:paddingStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_heading">

        </EditText>


        <EditText
            android:textSize="14sp"
            android:id="@+id/SecondName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edit_text_background"
            android:focusable="true"
            android:hint="@string/second_name"
            android:fontFamily="@font/canaro_light"
            android:paddingStart="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_heading">

        </EditText>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>