<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dashboard.goals.GoalsFragment">

<LinearLayout
    android:background="#D0D4BA"
    android:id="@+id/llGoal"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/back_light_svgrepo_com"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardBack"

            />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardBack"
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/petrona"
        android:text="Learn JetPackCompose"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="24sp"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name"
        android:id="@+id/Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/canaro_light"
        android:text="@string/progress"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="16sp"
        />

    <ProgressBar
        android:progressBackgroundTint="@color/white"
        android:max="100"
        android:progress="30"
        app:layout_constraintTop_toBottomOf="@id/Progress"
        android:layout_margin="20dp"
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminate="false"/>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_progress"
        android:fontFamily="@font/canaro_light"
        android:maxLines="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:text="30% complete"
        android:textColor="@color/Sage"
        app:layout_constraintTop_toBottomOf="@id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</LinearLayout>




    <TextView
        android:id="@+id/tv_roadmap"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/canaro_light"
        android:text="@string/my_roadmap"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="18sp"
        />


    <com.google.android.material.card.MaterialCardView
        app:rippleColor="@color/Sage"
        android:id="@+id/cardEdit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/llGoal"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
       >

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@drawable/edit_03_svgrepo_com"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/canaro_light"
                android:text="@string/edit_roadmap"
                android:textColor="@color/black"
                android:textFontWeight="200"
                android:textSize="12sp"
                app:tint="@color/Sage" />


            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/canaro_light"
                android:text="@string/edit_roadmap"
                android:textColor="@color/black"
                android:textFontWeight="100"
                android:textSize="12sp"
                />

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_progressItem"
        tools:listitem="@layout/item_progress"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardEdit"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>